--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
             <input type="text" placeholder="Enter Your Name" class="input input-bordered input-accent w-full max-w-xs" />
             <input type="tel" placeholder="Enter Your Number" class="input input-bordered input-secondary w-full max-w-xs" />
           </div>
+          <div class="m-4">
+            <h3 class="p-2">Upload Your Photo</h3>
+            <input type="file" class="file-input file-input-bordered file-input-success w-full max-w-xs" />
+          </div>
           <div class="navbar-center hidden lg:flex m-4">
             <ul class="menu menu-horizontal px-1">
                 
